--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>health_service</module>
         <module>health_dao</module>
         <module>health_web</module>
+        <module>health_jobs</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
