--- a/health_web/src/main/webapp/WEB-INF/web.xml
+++ b/health_web/src/main/webapp/WEB-INF/web.xml
@@ -34,4 +34,14 @@
 		<filter-name>char</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
+	<!--添加代理过滤器-->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
